<resources>
    <string name="app_name">Learnify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_judul">Label Judul</string>
    <string name="lihatSemua">Lihat Semua</string>
    <string name="title_kategori">Kategori Kelas</string>
    <string name="kursus_populer">Kursus Populer</string>
    <string name="judul_kursus">Judul Kursus</string>
    <string name="deskripsi_judul_kursus">Belajar data cleaning dan sorting dengan Python</string>
    <string name="chip_category_name">Web Developer</string>
    <string name="content_description_media">Gambar preview kursus</string>
    <string name="kelas_berjalan">Kelas Berjalan</string>
    <string name="cari_kursus_terbaik">Cari Kursus Terbaik.....</string>
    <string name="all">All</string>
    <string name="imageclass">ImageClass</string>
    <string name="promosi">Promosi</string>
    <string name="dapatkan_potongan_50_selama_bulan_maret">Dapatkan Potongan 50% selama Bulan Maret!!</string>
    <string name="syarat_dan_ketentuan_berlaku">Syarat dan Ketentuan Berlaku!</string>
    <string name="_2_maret_12_00">2 Maret, 12.00</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="paling_baru">Paling Baru</string>
    <string name="paling_populer">Paling Populer</string>
    <string name="promo">Promo</string>
    <string name="kategori">Kategori</string>
    <string name="ui_ux_design">UI/UX Design</string>
    <string name="web_development">Web Development</string>
    <string name="ui_android_development">UI/Android Development</string>
    <string name="data_science">Data Science</string>
    <string name="business_intelligence">Business Intelligence</string>
    <string name="level_kesulitan">Level Kesulitan</string>
    <string name="semua_level">Semua Level</string>
    <string name="beginner_level">Beginner Level</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="terapkan_filter">Terapkan Filter</string>
    <string name="hapus_filter">Hapus Filter</string>
    <string name="_60_menit">60 Menit</string>
    <string name="materi_kelas">Materi Kelas</string>
    <string name="tentang">Tentang</string>
    <string name="search">search</string>
    <string name="riwayat_pembayaran">Riwayat Pembayaran</string>
    <string name="star">***</string>
    <string name="by_john_doe">by John Doe</string>
    <string name="_10_05">10/05</string>
    <string name="todo">TODO</string>
    <string name="ppn_11">PPN 11%</string>
    <string name="harga">Harga</string>
    <string name="tidak_ada_riwayat_pembayaran_yang_ditemukan">Tidak ada riwayat pembayaran yang ditemukan.</string>
    <string name="login">Login</string>
    <string name="maaf_anda_harus_login_terlebih_dahulu">Maaf, Anda harus login terlebih dahulu!</string>
    <string name="floating_button">Floating Button</string>
    <string name="ambil_kelas_ini">AMBIL KELAS INI</string>
    <string name="selamat">Selamat!</string>
    <string name="transaksi_pembayaran_kelas_premium_berhasil">Transaksi pembayaran kelas premium berhasil!</string>
    <string name="yey_sekarang_kamu_sudah_bisa_mengikuti_kelas">Yey sekarang kamu sudah bisa mengikuti kelas!</string>
    <string name="LOGIN">LOGIN</string>
    <string name="logo">logo</string>
    <string name="back">back</string>
    <string name="beranda">Beranda</string>
    <string name="registrasi">Registrasi</string>
    <string name="berhasil">Berhasil</string>
    <string name="sukses">sukses</string>
    <string name="rating">rating</string>
    <string name="_4_7">4.7</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="titik">.</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="bca">BCA</string>
    <string name="asep_surasep">Asep Surasep</string>
    <string name="_2201987265">2201987265</string>
    <string name="nama_pemilik_rekening">Nama Pemilik Rekening</string>
    <string name="nomer_rekening">Nomer Rekening</string>
    <string name="button_bayar">button bayar</string>
    <string name="american_expres">american expres</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_number">Card Number</string>
    <string name="_2500_00000_0000_0000">2500 00000 0000 0000</string>
    <string name="billie_eilish">Billie Eilish</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date">Expiry date</string>
    <string name="master_card">master card</string>
    <string name="visa">visa</string>
    <string name="paypal">paypal</string>
    <string name="jumlah_modul">Jumlah Modul</string>
    <string name="premium">Premium</string>
    <string name="kelas_premium">Kelas Premium</string>
    <string name="button_beli">button beli</string>
    <string name="selangkah_lagi_menuju">Selangkah Lagi Menuju</string>
    <string name="button_onboarding">button onboarding</string>
    <string name="filter">Filter</string>
    <string name="tab_layout">tab layout</string>
    <string name="button_telegram">button telegram</string>
    <string name="tentang_kelas">Tentang Kelas</string>
    <string name="kelas_ini_ditunjukan_untuk">Kelas Ini Ditunjukan Untuk</string>
    <string name="foto">foto</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="nomer_tlp">Nomer Tlp</string>
    <string name="kewarganegaraan_tempat_tinggal">Kewarganegaraan Tempat Tinggal</string>
    <string name="button">button</string>
    <string name="in_progress">In Progress</string>
    <string name="selesai">Selesai</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya Akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="masuk_tanpa_login">Masuk Tanpa Login</string>
    <string name="masuk">MASUK</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="gambar">gambar</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="akun">Akun</string>
    <string name="profil">profil</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="edit_profile">edit profile</string>
    <string name="icon">icon</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="keluar">Keluar</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">DAFTAR</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="sudah_punya_akun">Sudah punya Akun?</string>
    <string name="list_kategori">List Kategori</string>
    <string name="toggle_full_screen">toggle full screen</string>
    <string name="modul">Modul</string>
    <string name="beli_rp_50_000">Beli Rp. 50.000</string>
    <string name="_60_complete">60% Complete</string>
    <string name="an_error_occured">An Error Occured!</string>
    <string name="waiting_payment">waiting payment</string>
    <string name="paid">paid</string>
    <string name="mulai_kelas">Mulai Kelas</string>
    <string name="deskripsi">deskripsi</string>
    <string name="minus">-</string>
    <string name="menit">Menit</string>
    <string name="_60">60</string>
    <string name="notif">notif</string>
    <string name="oopps">Oopps!</string>
    <string name="onboarding">OnBoarding...</string>
    <string name="persiapkan_hal_berikut_untuk_belajar_yang_maksimal">Persiapkan hal berikut untuk belajar yang maksimal:</string>
    <string name="mempunyai_akun_figma_atau_install_adobe_xd_menggunakan_internet_minimal_kecepatan_2mbps_belajar_di_tempat_yang_nyaman">Mempunyai akun Figma atau Install Adobe XD Menggunakan internet minimal kecepatan 2Mbps Belajar di tempat yang nyaman</string>
    <string name="materi_belajar">Materi Belajar</string>
    <string name="tandai_semua_telah_dibaca">Tandai Semua Telah Dibaca</string>
    <string name="belum_ada_notifikasi">Belum Ada Notifikasi...</string>
    <string name="bg">bg</string>
    <string name="tujuan_mengikuti_kelas_design_system">Tujuan Mengikuti Kelas Design System</string>
    <string name="_1">1</string>
    <string name="lock">lock</string>
    <string name="gratis">Gratis</string>

</resources>