<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="328dp"
    android:layout_height="56dp"
    >


    <ImageView
        android:id="@+id/IconNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notif"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tvTitleNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="3dp"
        android:text="@string/promosi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/TextClockNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_marginStart="245dp"
        android:format24Hour="EEEE MMMM, HH:mm"
        android:text="@string/_2_maret_12_00"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/StatusBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_status_green"
        android:layout_gravity="end"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="3dp"/>

    <TextView
        android:id="@+id/DescNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_marginTop="23dp"
        android:layout_marginStart="40dp"
        android:text="@string/dapatkan_potongan_50_selama_bulan_maret"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/HintSnK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginStart="40dp"
        android:hint="@string/syarat_dan_ketentuan_berlaku"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</androidx.cardview.widget.CardView>