<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparant"
    >

    <View
        android:id="@+id/viewBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_border"
        />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/close_action"
        android:textColor="@color/primary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/viewBottomSheet"
        app:layout_constraintTop_toTopOf="@id/viewBottomSheet"
        tools:ignore="ImageContrastCheck" />
    
    <TextView
        android:id="@+id/tvOps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oopps"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/primary"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@id/viewBottomSheet"
        app:layout_constraintStart_toStartOf="@id/viewBottomSheet"
        app:layout_constraintEnd_toEndOf="@id/viewBottomSheet"
        android:layout_marginTop="100dp" />

    <ImageView
        android:id="@+id/imgIlustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ilustration_beranda_nonlogin"
        app:layout_constraintTop_toBottomOf="@id/tvOps"
        app:layout_constraintStart_toStartOf="@id/viewBottomSheet"
        app:layout_constraintEnd_toEndOf="@id/viewBottomSheet"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/gambar" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maaf_anda_harus_login_terlebih_dahulu"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgIlustration"
        app:layout_constraintStart_toStartOf="@id/viewBottomSheet"
        app:layout_constraintEnd_toEndOf="@id/viewBottomSheet"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_to_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/primary"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvMsg"
        app:layout_constraintStart_toStartOf="@id/tvMsg"
        app:layout_constraintTop_toBottomOf="@id/tvMsg" />

</androidx.constraintlayout.widget.ConstraintLayout>